# Pyxis-Protocol

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile.build  LICENSE  README.md  SKILL.md  check-authority.cjs  check-onchain.js  contribution-tracker.js  contributions.json  create-wallet.cjs  debug-accounts.js  deploy-attempt-3.cjs  deploy-final-attempt.cjs  deploy-sovereign.cjs  final-mint.cjs  fund-test-wallet.cjs  package.json  tsconfig.json  wrangler.jsonc
.agent/workflows/: build-and-deploy.md
auditor-agent/: auditor.js
broker/: cloudflare-worker.ts  gateway.ts  libp2p-node.ts  local-worker.ts  nosana-simulator.ts  p2p-consumer.ts  p2p-worker.ts  package.json  run-local-oracle.ts  server.ts  test-agent-query.ts  test-final-query.ts
consumer-demo/: index.js
docs/: resource-broker-spec.md  standard-mcp-oracle-spec.md
docs/integrations/: agentmemory.md  openfort.md  said.md
oracle-examples/agentdex-trade-oracle/: README.md  index.ts
oracle-templates/backpack-bridge/: server.js
oracle-templates/cross-venue-arbitrage/: server.js
programs/pyxis/: Cargo.toml
programs/pyxis/src/: lib.rs
scripts/: alpha-vs-fraud.js  auditor-mock.js  check-program.js  check-tx.js  count_oracles.js  diagnostic.js  live-heartbeat.js  live-test-direct.js  live-test-manual.js  live-test-run.js  live-test-sdk.mjs  smoke-test.js  update-ace-oracle.ts
sdk/: package.json
sdk/src/: clob-helpers.ts  (+1 more)
tests/: auditor-e2e.ts  e2e-suite.ts  template-roi-safety.ts  template-specialized.ts
ui/: package-lock.json  package.json  vite.config.ts  wrangler.jsonc
(+19 files in other folders)
