[package]
name = "pyxis"
version = "0.1.0"
description = "Decentralized Oracle Marketplace - Agents Sell Data, Get Paid Per Query"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pyxis"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.16.27"
spl-token = "=4.0.0"
spl-memo = "=4.0.0"
spl-token-2022 = "=0.9.0"
